// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorSurface Editing Question Page should render as expected 1`] = `
<Form
  onChange={[Function]}
  onSubmit={[Function]}
>
  <Toolbar>
    <Toolbar__Buttons>
      <Button
        data-test="btn-move"
        disabled={false}
        onClick={[Function]}
        small={true}
        type="button"
        variant="tertiary"
      >
        <IconText
          hideText={false}
          icon={[Function]}
        >
          Move
        </IconText>
      </Button>
      <IconButtonDelete
        data-test="btn-delete"
        hideText={false}
        onClick={[Function]}
      >
        Delete
      </IconButtonDelete>
    </Toolbar__Buttons>
  </Toolbar>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <PageTransition
      enter={true}
      exit={false}
      in={false}
      key="question-page-editor"
      timeout={300}
    >
      <div>
        <Connect(withRouter(Apollo(Apollo(Apollo(Apollo(Apollo(Apollo(Apollo(Apollo(QPE))))))))))
          data-test="question-page-editor"
          onCloseDeleteConfirmDialog={[Function]}
          onCloseMovePageDialog={[Function]}
          onDeletePageConfirm={[Function]}
          onMovePage={[Function]}
          onUpdatePage={[Function]}
          page={
            Object {
              "__typename": "Page",
              "answers": Array [
                Object {
                  "__typename": "MultipleChoiceAnswer",
                  "id": "1",
                  "options": Array [
                    Object {
                      "__typename": "Option",
                      "description": "",
                      "id": "0",
                      "label": "",
                    },
                  ],
                  "type": "Checkbox",
                },
              ],
              "id": "2",
              "title": "",
            }
          }
          section={
            Object {
              "__typename": "Section",
              "id": "3",
              "pages": Array [
                Object {
                  "__typename": "Page",
                  "answers": Array [
                    Object {
                      "__typename": "MultipleChoiceAnswer",
                      "id": "1",
                      "options": Array [
                        Object {
                          "__typename": "Option",
                          "description": "",
                          "id": "0",
                          "label": "",
                        },
                      ],
                      "type": "Checkbox",
                    },
                  ],
                  "id": "2",
                  "title": "",
                },
              ],
              "title": "",
            }
          }
          showDeleteConfirmDialog={false}
          showMovePageDialog={false}
        />
      </div>
    </PageTransition>
  </TransitionGroup>
</Form>
`;

exports[`EditorSurface Editing Section Should render as expected 1`] = `
<Form
  onChange={[Function]}
  onSubmit={[Function]}
>
  <Toolbar>
    <Toolbar__Buttons>
      <Button
        data-test="btn-move"
        disabled={true}
        onClick={[Function]}
        small={true}
        type="button"
        variant="tertiary"
      >
        <IconText
          hideText={false}
          icon={[Function]}
        >
          Move
        </IconText>
      </Button>
      <IconButtonDelete
        data-test="btn-delete"
        hideText={false}
        onClick={[Function]}
      >
        Delete
      </IconButtonDelete>
    </Toolbar__Buttons>
  </Toolbar>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <PageTransition
      enter={true}
      exit={false}
      in={false}
      key="section-editor"
      timeout={300}
    >
      <div>
        <Connect(withEntityEditor(UnwrappedSectionEditor))
          data-test="section-editor"
          onCloseDeleteConfirmDialog={[Function]}
          onDeleteSectionConfirm={[Function]}
          onUpdate={[Function]}
          section={
            Object {
              "__typename": "Section",
              "id": "3",
              "pages": Array [
                Object {
                  "__typename": "Page",
                  "answers": Array [
                    Object {
                      "__typename": "MultipleChoiceAnswer",
                      "id": "1",
                      "options": Array [
                        Object {
                          "__typename": "Option",
                          "description": "",
                          "id": "0",
                          "label": "",
                        },
                      ],
                      "type": "Checkbox",
                    },
                  ],
                  "id": "2",
                  "title": "",
                },
              ],
              "title": "",
            }
          }
          showDeleteConfirmDialog={false}
        />
      </div>
    </PageTransition>
  </TransitionGroup>
</Form>
`;
